--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -2238,7 +2238,7 @@ button.close {
 }
 
 .slicknav_btn .slicknav_icon-bar+.slicknav_icon-bar {
-    margin-top: .188em
+    margin-top: .288em
 }
 
 .slicknav_menu .slicknav_menutxt {
@@ -2247,7 +2247,6 @@ button.close {
     float: left;
     color: #fff;
     font-weight: 700;
-    text-shadow: 0 1px 3px #000
 }
 
 .slicknav_menu .slicknav_icon {
@@ -2317,9 +2316,10 @@ button.close {
 
 .slicknav_menu {
     *zoom: 1;
-    font-size: 16px;
-    background: #4c4c4c;
-    padding: 5px
+    font-size: 20px;
+    background: #FF8D7B;
+    padding: 1px;
+    border-radius: 10px;
 }
 
 .slicknav_nav,
@@ -2330,7 +2330,7 @@ button.close {
 }
 
 .slicknav_menu .slicknav_icon-bar {
-    background-color: #fff
+    background-color: rgb(255, 255, 255)
 }
 
 .slicknav_btn {
@@ -2340,12 +2340,12 @@ button.close {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    background-color: #222
+    background-color: #FF8D7B);
 }
 
 .slicknav_nav {
     clear: both;
-    color: #fff;
+    color: rgb(56, 27, 27);
     margin: 0;
     font-size: .875em
 }
@@ -4774,7 +4774,9 @@ screen and (max-height: 300px) {
     content: "\f879"
 }
 
-.fa-whatsapp::before {}
+.fa-whatsapp::before {
+    content: "\f232"
+}
 
 .fa-pinterest-p:before {
     content: "\f231"
