--- a/assets/css/stylegalabt.css
+++ b/assets/css/stylegalabt.css
@@ -11766,10 +11766,11 @@ body:after {
 /* Three columns side by side */
 
 .column {
-    float: left;
-    width: 33.3%;
+    float: inline-start;
+    width: 25%;
     margin-bottom: 16px;
-    padding: 0 20px;
+    margin-left: 70px;
+    padding: 0 10px;
 }
 
 
@@ -11794,6 +11795,7 @@ body:after {
 
 .container {
     padding: 0 16px;
+    text-align: center;
 }
 
 
@@ -11808,20 +11810,4 @@ body:after {
 
 .title {
     color: grey;
-}
-
-.button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #f9705a;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-}
-
-.button:hover {
-    background-color: #f89586;
 }
